--- a/templates/contest/list.html
+++ b/templates/contest/list.html
@@ -50,7 +50,7 @@
 
 {% block title_row %}
     {% set tab = 'list' %}
-    {% set title = 'Contests' %}
+    {% set title = 'Activities' %}
     {% include "contest/contest-list-tabs.html" %}
 {% endblock %}
 
