--- a/templates/summary/overall.html
+++ b/templates/summary/overall.html
@@ -2,10 +2,12 @@
   <tr>
     {% if ranked %}
       <th>Rank</th>
+    {% else %}
+      <th>Number</th>
+    {% endif %}
       <th>Last Name</th>
       <th>First Name</th>
       <th>Section</th>
-    {% endif %}
     {% for header in problem_headers %}
       <th>{{ header }}</th>
     {% endfor %}
@@ -20,7 +22,7 @@
       <th>Total</th>
     {% endif %}
   </tr>
-  {% if not ranked %}
+  {% if zero_row %}
     <tr>
       {% for header in problem_headers %}
         <td>0</td>
@@ -29,12 +31,10 @@
   {% endif %}
   {% for student_grade in student_grades %}
     <tr>
-      {% if ranked %}
-        <td>{{ loop.index }}</td>
-        <td>{{ student_grade.last_name }}</td>
-        <td>{{ student_grade.first_name }}</td>
-        <td>{{ student_grade.section }}</td>
-      {% endif %}
+      <td>{{ loop.index }}</td>
+      <td>{{ student_grade.last_name }}</td>
+      <td>{{ student_grade.first_name }}</td>
+      <td>{{ student_grade.section }}</td>
       {% for grade in student_grade.grades %}
          <td>{{ grade.grade|int }}{% if ranking %}({{ grade.time|date('M j (D), h:i A') }}){% endif %}</td>
       {% endfor %}
